# llm-response-schema-lite-py

./: README.md  pyproject.toml
src/llm_response_schema_lite/: __init__.py  validate.py
tests/: test_validate.py
