[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "llm-response-schema-lite-py"
version = "0.1.0"
description = "Tiny schema validator for structured LLM responses. Python port of @mukundakatta/llm-response-schema-lite."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "ai",
  "llm",
  "agents",
  "rag",
  "evals",
  "schema",
  "validation",
  "json",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/llm-response-schema-lite-py"
Issues = "https://github.com/MukundaKatta/llm-response-schema-lite-py/issues"
Source = "https://github.com/MukundaKatta/llm-response-schema-lite-py"
"JS sibling" = "https://www.npmjs.com/package/@mukundakatta/llm-response-schema-lite"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_response_schema_lite"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
